--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,20 @@
 baseURL = "http://live.cogley.info"
+title = "RC Live"
 languageCode = "en-us"
-title = "RCC Live"
+copyright = "This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International (CC BY-SA 4.0) License. Some rights reserved by James R. Cogley"
+enableGitInfo = "true"
+
 [permalinks]
   post = "/:year/:month/:day/:title/"
+[taxonomies]
+  tag = "tags"
+
+
+[params]
+    description = "RCLive is bite-sized blog posts from Rick Cogley."
+    keywords = "Cogley,Japan,IT,Culture"
+    # Used when a given page doesn't set its own.
+    defaultDescription = "A post by Rick Cogley"
+    defaultKeywords = "cogley,post"
+    thumbnail = "/img/rick-cogley-avatar-90x90.png"
+    ISO8601 = "2006-01-02T15:04:05JST"
