Change so the permalink is using the slug, not the title
Also needed to set forwarding on one, and the slug on another to
compensate.

--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ copyright = "This work is licensed under a Creative Commons Attribution-ShareAli
 enableGitInfo = "true"
 
 [permalinks]
-  post = "/:year/:month/:day/:title/"
+  post = "/:year/:month/:day/:slug/"
 [taxonomies]
   tag = "tags"
 
