--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ title = "RC Live"
 languageCode = "en-us"
 copyright = "This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International (CC BY-SA 4.0) License. Some rights reserved by James R. Cogley"
 enableGitInfo = "true"
+enableemoji = "true"
 
 [permalinks]
   post = "/:year/:month/:day/:slug/"
