--- a/config.toml
+++ b/config.toml
@@ -1,15 +1,23 @@
-baseURL = "http://live.cogley.info"
+baseURL = "//live.cogley.info"
 title = "RC Live"
 languageCode = "en-us"
 copyright = "This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International (CC BY-SA 4.0) License. Some rights reserved by James R. Cogley"
 enableGitInfo = "true"
 enableemoji = "true"
 
+# Note: This can also be set per language.
+# Every Page Kind without a definition here will be assigned the HTML output format.
+# Also note that the outputs section in Page front matter will override any setting in here.
+[outputs]
+home = [ "HTML", "RSS", "JSON" ]
+# home = [ "HTML", "AMP", "RSS", "JSON", "MyEnrichedFormat"]
+# page = [ "HTML"]
+
 [permalinks]
   post = "/:year/:month/:day/:slug/"
+
 [taxonomies]
   tag = "tags"
-
 
 [params]
     description = "RCLive is bite-sized blog posts from Rick Cogley."
@@ -17,5 +25,5 @@ enableemoji = "true"
     # Used when a given page doesn't set its own.
     defaultDescription = "A post by Rick Cogley"
     defaultKeywords = "cogley,post"
-    thumbnail = "/img/rick-cogley-avatar-90x90.png"
+    thumbnail = "/img/rclive-logo.png"
     ISO8601 = "2006-01-02T15:04:05JST"
