--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 baseURL = "//live.cogley.info"
-title = "RC Live"
+defaultContentLanguage = "en"
 languageCode = "en-us"
+title = "RC Live"
 copyright = "This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International (CC BY-SA 4.0) License. Some rights reserved by James R. Cogley"
 enableGitInfo = "true"
 enableemoji = "true"
