--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ enableemoji = "true"
 # Every Page Kind without a definition here will be assigned the HTML output format.
 # Also note that the outputs section in Page front matter will override any setting in here.
 [outputs]
-home = [ "HTML", "RSS", "JSON" ]
+home = [ "HTML", "RSS" ]
 # home = [ "HTML", "AMP", "RSS", "JSON", "MyEnrichedFormat"]
 # page = [ "HTML"]
 
