--- a/config.toml
+++ b/config.toml
@@ -28,3 +28,4 @@ home = [ "HTML", "RSS" ]
     defaultKeywords = "cogley,post"
     thumbnail = "/img/rclive-logo.png"
     ISO8601 = "2006-01-02T15:04:05JST"
+    googleAnalytics = "UA-1040233-9"
