--- a/config.toml
+++ b/config.toml
@@ -29,3 +29,13 @@ home = [ "HTML", "RSS" ]
     thumbnail = "/img/rclive-logo.png"
     ISO8601 = "2006-01-02T15:04:05JST"
     googleAnalytics = "UA-1040233-9"
+
+[imaging]
+# Default resample filter used for resizing. Default is Box,
+# a simple and fast averaging filter appropriate for downscaling.
+# See https://github.com/disintegration/imaging
+
+resampleFilter = "box"
+
+# JPEG quality setting. Default is 75.
+quality = 80
