--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       # install git and jq for json manipulation
       - run: apk update && apk add git && apk add jq
 
-      # checkout the repository
+      # checkout the repository of this project
       - checkout
 
       # install git submodules for managing third-party dependencies
