--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,8 +78,8 @@ jobs:
               curl -A "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13) AppleWebKit/604.1.38 (KHTML, like Gecko) Version/11.0 Safari/604.1.38" "https://pingomatic.com/ping/?title=Rick+Cogley+Live&blogurl=http%3A%2F%2Flive.cogley.info&rssurl=http%3A%2F%2Flive.cogley.info%2Findex.xml&chk_weblogscom=on&chk_blogs=on&chk_feedburner=on&chk_newsgator=on&chk_myyahoo=on&chk_pubsubcom=on&chk_blogdigger=on&chk_weblogalot=on&chk_newsisfree=on&chk_topicexchange=on&chk_google=on&chk_tailrank=on&chk_skygrid=on&chk_collecta=on&chk_superfeedr=on"
               curl "http://www.google.com/webmasters/tools/ping?sitemap=http%3A%2F%2Flive.cogley.info%2Fsitemap.xml"
               curl "http://www.bing.com/webmaster/ping.aspx?siteMap=http%3A%2F%2Flive.cogley.info%2Fsitemap.xml"
-              rsync -avz --delete --exclude '.well-known' $HUGO_BUILD_DIR2/ rickcogley@tilde.town:/home/rickcogley/public_html
-              rsync -avz --delete --exclude '.well-known' $HUGO_BUILD_DIR3/ rickcogley@ctrl-c.club:/home/rickcogley/public_html
+              rsync -avz --delete --exclude '.well-known' -e "ssh -o StrictHostKeyChecking=no" $HUGO_BUILD_DIR2/ rickcogley@tilde.town:/home/rickcogley/public_html
+              rsync -avz --delete --exclude '.well-known' -e "ssh -o StrictHostKeyChecking=no" $HUGO_BUILD_DIR3/ rickcogley@ctrl-c.club:/home/rickcogley/public_html
             else
               echo "Not master branch, dry run only"
             fi
