Commented out the apt-get line because git and jq are now included, thanks @felicianotech
Fixes cibuilds/hugo#143

Signed-off-by: Rick Cogley <rick.cogley@esolia.co.jp>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,9 @@ jobs:
       HUGO_BUILD_DIR3: ~/hugo/tilde
     steps:
       # install git and jq for json manipulation
-      - run: apt-get update && apt-get install -y git && apt-get install -y jq && apt-get install -y rsync
+      # jq and git now included
+      # if apt-get needed run it with sudo
+      # - run: apt-get update && apt-get install -y git && apt-get install -y jq && apt-get install -y rsync
 
       # checkout the repository of this project
       - checkout
